# fastapi-headless-cms

./: LICENSE  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: endpoints.py
app/common/exceptions/: app_exceptions.py  error_codes.py
app/common/http_response/: success_result.py
app/common/http_responses/: error_response.py  success_result.py
app/core/: config.py  jwt_handler.py  lifespan.py  logging.py
app/core/exceptions/: __init__.py  app_exceptions.py  error_codes.py
app/domain/auth/: api.py  depends.py  schemas.py
app/domain/auth/usecases/: authenticate.py  create_tokens.py  login_user.py  read_jwt_token.py  verify_token_payload.py
app/domain/comment/: api.py  depends.py  models.py  schemas.py
app/domain/comment/repositories/: __init__.py  comment.py  interface.py
app/domain/comment/usecases/: create_comment.py  delete_comment.py  get_comment.py  list_comments.py  update_comment.py
app/domain/post/: api.py  depends.py  models.py  schemas.py  utils.py
app/domain/post/repositories/: __init__.py  interface.py  post.py
app/domain/post/usecases/: create_post.py  delete_post.py  get_post.py  list_posts.py  update_post.py
app/domain/user/: api.py  depends.py  models.py  schemas.py
app/domain/user/repositories/: __init__.py  interface.py  user.py
app/domain/user/usecases/: register.py  register_user.py
app/infrastructure/database/: __init__.py  engine.py  session.py
app/middleware/: cors.py  gzip.py  logging.py  registry.py
app/utils/: jwt.py
app/utils/auth/: jwt.py  security.py
requirements/: base.txt  dev.txt
scripts/: format.sh  lint.sh  precommit.sh  test.sh
tests/: conftest.py  test_main.py
tests/api/v1/auth/: test_get_current_user_invalid_token.py  test_get_current_user_no_token.py  test_get_current_user_success.py  test_get_current_user_unauthorized_failure.py  test_login_for_tokens_invalid_credentials_failure.py  test_login_for_tokens_success.py  test_login_invalid_password.py  test_login_nonexistent_user.py  test_login_success.py  test_refresh_tokens_success.py  test_swagger_oauth2_token_success.py  test_verify_access_token_success.py
tests/api/v1/comment/: test_create_comment_not_authenticated.py  test_create_comment_post_not_found.py  test_create_comment_success.py  test_create_comment_with_invalid_data.py  test_create_reply_max_depth_reached.py  test_create_reply_success.py  test_create_reply_to_deleted_comment.py  test_create_reply_to_different_post.py  test_create_reply_to_nonexistent_parent.py  test_delete_comment_already_deleted.py  test_delete_comment_by_different_user.py  test_delete_comment_not_authenticated.py  test_delete_comment_not_found.py  test_delete_comment_success.py  (+8 more)
(+23 files in other folders)
