[project]
name = "fastapi-headless-cms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "argon2-cffi>=25.1.0",
    "databases>=0.9.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "passlib[argon2]>=1.7.4",
    "pydantic[email]>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "python-jose[cryptography]>=3.5.0",
    "redis[async]>=6.4.0",
    "sqlalchemy>=2.0.43",
    "trio>=0.30.0",
    "uvicorn>=0.35.0",
    "python-multipart>=0.0.20",
]
