[project]
name = "fastapi-headless-cms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy[asyncio]>=2.0.43",
    "uvicorn[standard]>=0.35.0",
    "aiosqlite>=0.21.0",
    "python-multipart>=0.0.20",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "httpx>=0.28.1",
    "pytest-cov",
    "orjson",
]

[dependency-groups]
dev = [
    "absl-py==2.3.1",
    "annotated-types==0.7.0",
    "archinstall==3.0.9",
    "attrs==25.3.0",
    "black>=25.1.0",
    "btrfsutil==6.16",
    "certifi==2025.8.3",
    "cffi==1.17.1",
    "cryptography==45.0.5",
    "filelock==3.19.1",
    "isort",
    "packaging==25.0",
    "psutil==7.0.0",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pygdbmi==0.11.0.0",
    "pyparted==3.13.0",
    "pytest-cov",
    "reflector==2023.6.28.0.36.1",
    "ruff",
    "sentry-sdk==2.35.0",
    "smbus==1.1",
    "systemd-python==235",
    "tbb==0.2",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "urllib3==2.5.0",
    "uv==0.8.14",
    "wheel==0.45.1",
]
